--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,15 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.home.HomeActivity">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/title_home"
-        style="@style/ToolbarStyle" />
+    tools:context=".presentation.home.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +13,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:padding="@dimen/padding_default"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
