--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -5,20 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/title_weather"
-        style="@style/ToolbarStyle" />
-
     <LinearLayout
+        android:id="@+id/input_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/padding_small"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        android:padding="@dimen/padding_small">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/EditTextStyle.Base"
